Yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "canary-ingress-blue"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "75"
    kubernetes.io/elb.port: '80'
spec:
  rules:
    - host: www.bluegreen.com
      http:
        paths:
          - path: '/'
            backend:
              serviceName: blue-service
              servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "canary-ingress-green"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
    kubernetes.io/elb.port: '80'
spec:
  rules:
    - host: www.bluegreen.com
      http:
        paths:
          - path: '/'
            backend:
              serviceName: green-service
              servicePort: 8081
